--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build-vite": "npx vite build"
+    "serve-run": "vue-cli-service serve -c vue.config.cjs",
+    "serve-lint": "vue-cli-service lint",
+    "build": "node vite.build.mjs"
   },
   "dependencies": {
     "core-js": "^3.8.3",
